--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+URL_EGITIM=jdbc:mysql://10.20.3.12:3306/EGITIM_KARDESIM
+USERNAME_EGITIM=egitim_kardesim
+PASSWORD_EGITIM=CScTQlnA1UMKHdwkoa7L
+
 spring.datasource.url=jdbc:mysql://10.20.3.12:3306/EGITIM_KARDESIM
 spring.datasource.username=egitim_kardesim
 spring.datasource.password=CScTQlnA1UMKHdwkoa7L
